kubernetes/manifests/yarrg.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yarrg
  namespace: yarrg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarrg-radarr-deployment-c8835f9d
  namespace: yarrg
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: yarrg-radarr-deployment-c891f9ae
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: yarrg-radarr-deployment-c891f9ae
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/radarr:6.3.0
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - /usr/bin/env
                - bash
                - -c
                - API_KEY=$(awk -F'[<>]' '/ApiKey/{print $3}' /config/config.xml) && curl --fail localhost:7878/api/v3/system/status?apiKey=$API_KEY
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: radarr
          ports:
            - containerPort: 7878
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 7878
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 7878
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /media
              name: media
            - mountPath: /config
              name: pvc-yarrg-radarr-config-pvc-c8669b0f
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: media
          nfs:
            path: /mnt/WD-6D-8T/fin
            server: 10.0.10.180
        - name: pvc-yarrg-radarr-config-pvc-c8669b0f
          persistentVolumeClaim:
            claimName: yarrg-radarr-config-pvc-c8669b0f
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: yarrg-radarr-service-c8178200
  namespace: yarrg
spec:
  externalIPs: []
  ports:
    - name: http
      port: 7878
      protocol: TCP
  selector:
    cdk8s.io/metadata.addr: yarrg-radarr-deployment-c891f9ae
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: yarrg-radarr-ingress-c87ef447
  namespace: yarrg
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: yarrg-radarr-service-c8178200
                port:
                  number: 7878
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - radarr.us-drig-1.drigs.org
      secretName: yarr-radarr-yarrg-radarr-service-c8178200-tls-c8d9182e
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarrg-sonarr-deployment-c8f7742c
  namespace: yarrg
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: yarrg-sonarr-deployment-c82400f8
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: yarrg-sonarr-deployment-c82400f8
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/sonarr:4.0.19
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - /usr/bin/env
                - bash
                - -c
                - API_KEY=$(awk -F'[<>]' '/ApiKey/{print $3}' /config/config.xml) && curl --fail localhost:8989/api/v3/system/status?apiKey=$API_KEY
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: sonarr
          ports:
            - containerPort: 8989
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8989
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8989
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /media
              name: media
            - mountPath: /config
              name: pvc-yarrg-sonarr-config-pvc-c83d6d52
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: media
          nfs:
            path: /mnt/WD-6D-8T/fin
            server: 10.0.10.180
        - name: pvc-yarrg-sonarr-config-pvc-c83d6d52
          persistentVolumeClaim:
            claimName: yarrg-sonarr-config-pvc-c83d6d52
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: yarrg-sonarr-service-c850f64d
  namespace: yarrg
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8989
      protocol: TCP
  selector:
    cdk8s.io/metadata.addr: yarrg-sonarr-deployment-c82400f8
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: yarrg-sonarr-ingress-c84812a8
  namespace: yarrg
spec:
  ingressClassName: nginx
  rules:
    - host: sonarr.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: yarrg-sonarr-service-c850f64d
                port:
                  number: 8989
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sonarr.us-drig-1.drigs.org
      secretName: yarr-sonarr-yarrg-sonarr-service-c850f64d-tls-c820699b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarrg-lidarr-deployment-c8caac39
  namespace: yarrg
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: yarrg-lidarr-deployment-c82cd501
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: yarrg-lidarr-deployment-c82cd501
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/lidarr:3.1.0
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - /usr/bin/env
                - bash
                - -c
                - API_KEY=$(awk -F'[<>]' '/ApiKey/{print $3}' /config/config.xml) && curl --fail localhost:8686/api/v1/system/status?apiKey=$API_KEY
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: lidarr
          ports:
            - containerPort: 8686
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8686
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8686
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /media
              name: media
            - mountPath: /config
              name: pvc-yarrg-lidarr-config-pvc-c8c484de
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: media
          nfs:
            path: /mnt/WD-6D-8T/fin
            server: 10.0.10.180
        - name: pvc-yarrg-lidarr-config-pvc-c8c484de
          persistentVolumeClaim:
            claimName: yarrg-lidarr-config-pvc-c8c484de
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: yarrg-lidarr-service-c86e0d14
  namespace: yarrg
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8686
      protocol: TCP
  selector:
    cdk8s.io/metadata.addr: yarrg-lidarr-deployment-c82cd501
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: yarrg-lidarr-ingress-c85dc195
  namespace: yarrg
spec:
  ingressClassName: nginx
  rules:
    - host: lidarr.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: yarrg-lidarr-service-c86e0d14
                port:
                  number: 8686
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - lidarr.us-drig-1.drigs.org
      secretName: yarr-lidarr-yarrg-lidarr-service-c86e0d14-tls-c8579e22
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarrg-readarr-deployment-c8a14afe
  namespace: yarrg
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: yarrg-readarr-deployment-c8c61b5b
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: yarrg-readarr-deployment-c8c61b5b
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/readarr:0.4.18-develop
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - /usr/bin/env
                - bash
                - -c
                - API_KEY=$(awk -F'[<>]' '/ApiKey/{print $3}' /config/config.xml) && curl --fail localhost:8787/api/v1/system/status?apiKey=$API_KEY
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: readarr
          ports:
            - containerPort: 8787
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8787
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8787
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /media
              name: media
            - mountPath: /config
              name: pvc-yarrg-readarr-config-pvc-c83da581
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: media
          nfs:
            path: /mnt/WD-6D-8T/fin
            server: 10.0.10.180
        - name: pvc-yarrg-readarr-config-pvc-c83da581
          persistentVolumeClaim:
            claimName: yarrg-readarr-config-pvc-c83da581
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: yarrg-readarr-service-c8851e55
  namespace: yarrg
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8787
      protocol: TCP
  selector:
    cdk8s.io/metadata.addr: yarrg-readarr-deployment-c8c61b5b
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: yarrg-readarr-ingress-c8b95d5d
  namespace: yarrg
spec:
  ingressClassName: nginx
  rules:
    - host: readarr.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: yarrg-readarr-service-c8851e55
                port:
                  number: 8787
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - readarr.us-drig-1.drigs.org
      secretName: ya-readarr-yarrg-readarr-service-c8851e55-tls-c89a5f46
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarrg-bazarr-deployment-c84bbba8
  namespace: yarrg
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: yarrg-bazarr-deployment-c87b5d55
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: yarrg-bazarr-deployment-c87b5d55
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/bazarr:1.6.0
          imagePullPolicy: Always
          name: bazarr
          ports:
            - containerPort: 6767
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 6767
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 6767
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /media
              name: media
            - mountPath: /config
              name: pvc-yarrg-bazarr-config-pvc-c8321f91
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: media
          nfs:
            path: /mnt/WD-6D-8T/fin
            server: 10.0.10.180
        - name: pvc-yarrg-bazarr-config-pvc-c8321f91
          persistentVolumeClaim:
            claimName: yarrg-bazarr-config-pvc-c8321f91
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: yarrg-bazarr-service-c8953911
  namespace: yarrg
spec:
  externalIPs: []
  ports:
    - name: http
      port: 6767
      protocol: TCP
  selector:
    cdk8s.io/metadata.addr: yarrg-bazarr-deployment-c87b5d55
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: yarrg-bazarr-ingress-c84330d1
  namespace: yarrg
spec:
  ingressClassName: nginx
  rules:
    - host: bazarr.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: yarrg-bazarr-service-c8953911
                port:
                  number: 6767
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - bazarr.us-drig-1.drigs.org
      secretName: yarr-bazarr-yarrg-bazarr-service-c8953911-tls-c812ec01
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarrg-prowlarr-deployment-c875d51f
  namespace: yarrg
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: yarrg-prowlarr-deployment-c8b6c757
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: yarrg-prowlarr-deployment-c8b6c757
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/prowlarr:2.5.2
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - /usr/bin/env
                - bash
                - -c
                - API_KEY=$(awk -F'[<>]' '/ApiKey/{print $3}' /config/config.xml) && curl --fail localhost:9696/api/v1/system/status?apiKey=$API_KEY
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: prowlarr
          ports:
            - containerPort: 9696
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 9696
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 9696
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: pvc-yarrg-prowlarr-config-pvc-c826c13c
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-yarrg-prowlarr-config-pvc-c826c13c
          persistentVolumeClaim:
            claimName: yarrg-prowlarr-config-pvc-c826c13c
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: yarrg-prowlarr-service-c832eff5
  namespace: yarrg
spec:
  externalIPs: []
  ports:
    - name: http
      port: 9696
      protocol: TCP
  selector:
    cdk8s.io/metadata.addr: yarrg-prowlarr-deployment-c8b6c757
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: yarrg-prowlarr-ingress-c82f983d
  namespace: yarrg
spec:
  ingressClassName: nginx
  rules:
    - host: prowlarr.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: yarrg-prowlarr-service-c832eff5
                port:
                  number: 9696
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prowlarr.us-drig-1.drigs.org
      secretName: prowlarr-yarrg-prowlarr-service-c832eff5-tls-c87917d6
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarrg-byparr-deployment-c8a90579
  namespace: yarrg
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: yarrg-byparr-deployment-c8ce7925
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: yarrg-byparr-deployment-c8ce7925
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PORT
              value: "8191"
          image: ghcr.io/thephaseless/byparr:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8191
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 30
          name: byparr
          ports:
            - containerPort: 8191
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8191
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 30
          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: 8191
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 30
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: byparr
  namespace: yarrg
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8191
      protocol: TCP
      targetPort: 8191
  selector:
    cdk8s.io/metadata.addr: yarrg-byparr-deployment-c8ce7925
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yarrg-suggestarr-deployment-c8caba8d
  namespace: yarrg
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: yarrg-suggestarr-deployment-c8418997
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: yarrg-suggestarr-deployment-c8418997
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: LOG_LEVEL
              value: info
            - name: SUGGESTARR_PORT
              value: "5000"
            - name: TZ
              value: America/Los_Angeles
          image: docker.io/ciuse99/suggestarr:v2.13.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health/live
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          name: suggestarr
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health/live
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /api/health/live
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /app/config/config_files
              name: pvc-yarrg-suggestarr-config-pvc-c892ec19
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-yarrg-suggestarr-config-pvc-c892ec19
          persistentVolumeClaim:
            claimName: yarrg-suggestarr-config-pvc-c892ec19
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: yarrg-suggestarr-service-c86a299d
  namespace: yarrg
spec:
  externalIPs: []
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    cdk8s.io/metadata.addr: yarrg-suggestarr-deployment-c8418997
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: yarrg-suggestarr-ingress-c86a0583
  namespace: yarrg
spec:
  ingressClassName: nginx
  rules:
    - host: suggestarr.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: yarrg-suggestarr-service-c86a299d
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - suggestarr.us-drig-1.drigs.org
      secretName: yarrg-yarrg-suggestarr-service-c86a299d-tls-c819bbbe
